--- a/index.html
+++ b/index.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>选项卡</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="js/index.js">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <nav>
+            <ul>
+                <li class="active"><a href="Javascript:;">鞋子</a></li>
+                <li><a href="Javascript:;">手机</a></li>
+                <li><a href="Javascript:;">电脑</a></li>
+                <li><a href="Javascript:;">饮料</a></li>
+            </ul>
+        </nav>
+        <main>
+            <section>
+                <form oninput="x.value=parseInt(a.value)-parseInt(b.value)"style="display:block">
+                    <p>商品原价：<input id="a" type="range" value="300" min="300" max="1000"></p>
+                    <p>商品折扣：<input id="b" type="text" value="100"></p>
+                    <p>最终价格：<output id="x"></output></p>
+                    <p>
+                        商品名称：
+                        <input list="shoes">
+                        <datalist id="shoes">
+                            <option value="安踏">安踏</option>
+                            <option value="特步">特步</option>
+                            <option value="360">360</option>
+                            <option value="鸿星尔克">鸿星尔克</option>
+                        </datalist>
+                    </p>
+                </form> <!-- shoes -->
+                <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
+                    <p>商品原价：<input id="a" type="range" value="800" min="800" max="10000"></p>
+                    <p>商品折扣：<input id="b" type="text" value="200"></p>
+                    <p>最终价格：<output id="x"></output></p>
+                    <p>
+                        商品名称：
+                        <input list="phones">
+                        <datalist id="phones">
+                            <option value="华为">华为</option>
+                            <option value="iPhone">iPhone</option>
+                            <option value="三星">三星</option>
+                            <option value="一加">一加</option>
+                        </datalist>
+                    </p>
+                </form> <!-- phones -->
+                <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
+                    <p>商品原价：<input id="a" type="range" value="3000" min="3000" max="20000"></p>
+                    <p>商品折扣：<input id="b" type="text" value="300"></p>
+                    <p>最终价格：<output id="x"></output></p>
+                    <p>
+                        商品名称：
+                        <input list="computers">
+                        <datalist id="computers">
+                            <option value="苹果">苹果</option>
+                            <option value="联想">联想</option>
+                            <option value="神州">神州</option>
+                            <option value="外星人">外星人</option>
+                        </datalist>
+                    </p>
+                </form> <!-- computers -->
+                <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
+                    <p>商品原价：<input id="a" type="range" value="3" min="3" max="20"></p>
+                    <p>商品折扣：<input id="b" type="text" value="1"></p>
+                    <p>最终价格：<output id="x"></output></p>
+                    <p>
+                        商品名称：
+                        <input list="drinks">
+                        <datalist id="drinks">
+                            <option value="红牛">红牛</option>
+                            <option value="牛奶">牛奶</option>
+                            <option value="咖啡">咖啡</option>
+                            <option value="红茶">红茶</option>
+                        </datalist>
+                    </p>
+                </form> <!-- drinks -->
+            </section>
+            
+        </main>
+    </div>
 </body>
 </html>
