--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>选项卡</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="js/index.js">
 </head>
 <body>
     <div id="wrapper">
@@ -21,6 +20,7 @@
         <main>
             <section>
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)"style="display:block">
+                    <h2>鞋子</h2>
                     <p>商品原价：<input id="a" type="range" value="300" min="300" max="1000"></p>
                     <p>商品折扣：<input id="b" type="text" value="100"></p>
                     <p>最终价格：<output id="x"></output></p>
@@ -33,9 +33,11 @@
                             <option value="360">360</option>
                             <option value="鸿星尔克">鸿星尔克</option>
                         </datalist>
+                        <button>查找</button>
                     </p>
                 </form> <!-- shoes -->
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
+                    <h2>手机</h2>
                     <p>商品原价：<input id="a" type="range" value="800" min="800" max="10000"></p>
                     <p>商品折扣：<input id="b" type="text" value="200"></p>
                     <p>最终价格：<output id="x"></output></p>
@@ -48,9 +50,11 @@
                             <option value="三星">三星</option>
                             <option value="一加">一加</option>
                         </datalist>
+                        <button>查找</button>
                     </p>
                 </form> <!-- phones -->
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
+                    <h2>电脑</h2>
                     <p>商品原价：<input id="a" type="range" value="3000" min="3000" max="20000"></p>
                     <p>商品折扣：<input id="b" type="text" value="300"></p>
                     <p>最终价格：<output id="x"></output></p>
@@ -63,9 +67,11 @@
                             <option value="神州">神州</option>
                             <option value="外星人">外星人</option>
                         </datalist>
+                        <button>查找</button>
                     </p>
                 </form> <!-- computers -->
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
+                    <h2>饮料</h2>
                     <p>商品原价：<input id="a" type="range" value="3" min="3" max="20"></p>
                     <p>商品折扣：<input id="b" type="text" value="1"></p>
                     <p>最终价格：<output id="x"></output></p>
@@ -78,11 +84,12 @@
                             <option value="咖啡">咖啡</option>
                             <option value="红茶">红茶</option>
                         </datalist>
+                        <button>查找</button>
                     </p>
                 </form> <!-- drinks -->
             </section>
-            
         </main>
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
