--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <section>
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)"style="display:block">
                     <h2>鞋子</h2>
-                    <p>商品原价：<input id="a" type="range" value="300" min="300" max="1000"></p>
-                    <p>商品折扣：<input id="b" type="text" value="100"></p>
-                    <p>最终价格：<output id="x"></output></p>
+                    <p>商品原价：300<input id="a" type="range" value="300" min="300" max="1000">1000元</p>
+                    <p>商品折扣：<input id="b" type="text" value="100">元</p>
+                    <p>最终价格：<output id="x"></output>元</p>
                     <p>
                         商品名称：
                         <input list="shoes">
@@ -38,9 +38,9 @@
                 </form> <!-- shoes -->
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
                     <h2>手机</h2>
-                    <p>商品原价：<input id="a" type="range" value="800" min="800" max="10000"></p>
-                    <p>商品折扣：<input id="b" type="text" value="200"></p>
-                    <p>最终价格：<output id="x"></output></p>
+                    <p>商品原价：800<input id="a" type="range" value="800" min="800" max="10000">10000元</p>
+                    <p>商品折扣：<input id="b" type="text" value="200">元</p>
+                    <p>最终价格：<output id="x"></output>元</p>
                     <p>
                         商品名称：
                         <input list="phones">
@@ -55,9 +55,9 @@
                 </form> <!-- phones -->
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
                     <h2>电脑</h2>
-                    <p>商品原价：<input id="a" type="range" value="3000" min="3000" max="20000"></p>
-                    <p>商品折扣：<input id="b" type="text" value="300"></p>
-                    <p>最终价格：<output id="x"></output></p>
+                    <p>商品原价：3000<input id="a" type="range" value="3000" min="3000" max="20000">20000元</p>
+                    <p>商品折扣：<input id="b" type="text" value="300">元</p>
+                    <p>最终价格：<output id="x"></output>元</p>
                     <p>
                         商品名称：
                         <input list="computers">
@@ -72,9 +72,9 @@
                 </form> <!-- computers -->
                 <form oninput="x.value=parseInt(a.value)-parseInt(b.value)">
                     <h2>饮料</h2>
-                    <p>商品原价：<input id="a" type="range" value="3" min="3" max="20"></p>
-                    <p>商品折扣：<input id="b" type="text" value="1"></p>
-                    <p>最终价格：<output id="x"></output></p>
+                    <p>商品原价：3<input id="a" type="range" value="3" min="3" max="20">20元</p>
+                    <p>商品折扣：<input id="b" type="text" value="1">元</p>
+                    <p>最终价格：<output id="x"></output>元</p>
                     <p>
                         商品名称：
                         <input list="drinks">
